--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "mongoose": "^8.2.2",
     "next": "14.1.3",
     "react": "^18",
